[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gauss-jackson-integrator"
version = "0.1.0"
description = "Gauss Jackson Integrator"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "gauss_jackson" }
]

[tool.poetry.dependencies]

